--- a/set-coverings-assignment/set-covering.ipynb
+++ b/set-coverings-assignment/set-covering.ipynb
@@ -13,14 +13,25 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\darda\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\prova-sVNX-V2m-py3.12\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from random import random\n",
+    "from math import ceil\n",
     "from functools import reduce\n",
-    "from collections import namedtuple\n",
-    "from queue import PriorityQueue, SimpleQueue, LifoQueue\n",
+    "from collections import namedtuple, deque\n",
+    "from queue import PriorityQueue\n",
     "\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from tqdm.auto import tqdm"
    ]
   },
   {
@@ -29,13 +40,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PROBLEM_SIZE = 500\n",
-    "NUM_SETS = 10_000\n",
-    "SETS = tuple(\n",
-    "    np.array([random() < 0.3 for _ in range(PROBLEM_SIZE)])\n",
-    "    for _ in range(NUM_SETS)\n",
-    ")\n",
-    "State = namedtuple('State', ['taken', 'not_taken'])"
+    "State = namedtuple('State', ['taken', 'not_taken'])\n",
+    "\n",
+    "def join_taken(state):\n",
+    "    return reduce(\n",
+    "        np.logical_or,\n",
+    "        [SETS[i] for i in state.taken],\n",
+    "        np.array([False for _ in range(PROBLEM_SIZE)]),\n",
+    "    )\n",
+    "\n",
+    "def goal_check(state):\n",
+    "    return np.all(join_taken(state))"
    ]
   },
   {
@@ -44,21 +59,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def goal_check(state):\n",
-    "    return np.all(reduce(\n",
-    "        np.logical_or,\n",
-    "        [SETS[i] for i in state.taken],\n",
-    "        np.array([False for _ in range(PROBLEM_SIZE)]),\n",
-    "    ))\n",
+    "PROBLEM_SIZE = 10\n",
+    "NUM_SETS = 10\n",
+    "SETS = list(np.array([random() < 0.3 for _ in range(PROBLEM_SIZE)]) for _ in range(NUM_SETS))\n",
     "\n",
-    "\n",
-    "def distance(state):\n",
-    "    return PROBLEM_SIZE - sum(\n",
-    "        reduce(\n",
-    "            np.logical_or,\n",
-    "            [SETS[i] for i in state.taken],\n",
-    "            np.array([False for _ in range(PROBLEM_SIZE)]),\n",
-    "        ))\n"
+    "assert goal_check(State(set(range(NUM_SETS)), set())), \"Probelm not solvable\"\n"
    ]
   },
   {
@@ -67,15 +72,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert goal_check(\n",
-    "    State(set(range(NUM_SETS)), set())\n",
-    "), \"Probelm not solvable\""
+    "# preproccesing\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -83,79 +81,118 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# frontier = PriorityQueue()\n",
-    "frontier = SimpleQueue()\n",
+    "\n",
+    "def missing_coverage(state):\n",
+    "    return PROBLEM_SIZE-sum(state)\n",
+    "\n",
+    "def calc_overlap_and_false_number(state,e):\n",
+    "    return sum( np.logical_and(\n",
+    "        state, SETS[e])) + missing_coverage(SETS[e])\n",
+    "\n",
+    "def calc_extension(state,e):\n",
+    "    ext=0\n",
+    "    for i in state.taken:\n",
+    "        for j in range(PROBLEM_SIZE):\n",
+    "            if SETS[i][j]==False and SETS[e][j]==True:\n",
+    "                ext+=1\n",
+    "    return ext\n",
+    "\n",
+    "def my_h(state,e):    \n",
+    "    return calc_overlap(state, e)+calc_extension(state,e)\n",
+    "\n",
+    "def my_h2(state):\n",
+    "    joined_taken=join_taken(state)\n",
+    "    \n",
+    "    not_taken_sorted_by_overlap=sorted(state.not_taken,key=lambda e:calc_overlap_and_false_number(joined_taken,e))    \n",
+    "\n",
+    "    sets_still_needed=0\n",
+    "    for s in not_taken_sorted_by_overlap:\n",
+    "        \n",
+    "        if missing_coverage(joined_taken)==0:\n",
+    "            break\n",
+    "        joined_taken = np.logical_or(joined_taken,SETS[s])\n",
+    "        sets_still_needed+=1\n",
+    "        \n",
+    "    return sets_still_needed    \n",
+    "\n",
+    "def f(state):\n",
+    "    # return len(state.taken)+my_h(state,e)\n",
+    "    return len(state.taken) + my_h2(state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "9it [00:00, 474.93it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solved in 9 steps (4 tiles)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "frontier = PriorityQueue()\n",
     "state = State(set(), set(range(NUM_SETS)))\n",
-    "frontier.put((distance(state), state))#il primo elemento è la priorita', il secondo è l'elemento \n",
+    "frontier.put((0, state))\n",
     "\n",
     "counter = 0\n",
     "_, current_state = frontier.get()\n",
-    "while not goal_check(current_state):\n",
-    "    counter += 1\n",
-    "    for action in current_state[1]:\n",
-    "        new_state = State(\n",
-    "            current_state.taken ^ {action},\n",
-    "            current_state.not_taken ^ {action},\n",
-    "        )\n",
-    "        frontier.put((distance(new_state), new_state))\n",
-    "    _, current_state = frontier.get()\n",
+    "with tqdm(total=None) as pbar:\n",
+    "    while not goal_check(current_state):\n",
+    "        counter += 1\n",
+    "        for action in current_state.not_taken:\n",
+    "            new_state = State(\n",
+    "                current_state.taken ^ {action},\n",
+    "                current_state.not_taken ^ {action},\n",
+    "            )\n",
+    "            frontier.put((f(new_state), new_state))\n",
+    "        _, current_state = frontier.get()\n",
+    "        pbar.update(1)\n",
     "\n",
-    "print(\n",
-    "    f\"Solved in {counter:,} steps ({len(current_state.taken)} tiles)\"\n",
-    ")"
+    "print(f\"Solved in {counter:,} steps ({len(current_state.taken)} tiles)\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "State(taken={1, 7}, not_taken={0, 2, 3, 4, 5, 6, 8, 9})"
+       "{3, 4, 5, 8}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "current_state"
+    "current_state.taken"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ True, False,  True, False,  True])"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "SETS[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ci-P-7LqQ3C-py3.11",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -173,5 +210,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
