--- a/set-coverings-assignment/set-covering.ipynb
+++ b/set-coverings-assignment/set-covering.ipynb
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\darda\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\prova-sVNX-V2m-py3.12\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from random import random\n",
     "from math import ceil\n",
@@ -31,12 +22,14 @@
     "from queue import PriorityQueue\n",
     "\n",
     "import numpy as np\n",
-    "from tqdm.auto import tqdm"
+    "from tqdm.auto import tqdm\n",
+    "\n",
+    "ENABLE_PREPROCESSING=False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,16 +61,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# preproccesing\n"
+    "# preproccesing\n",
+    "def forced_sets():\n",
+    "    check_covered_by_one=np.vstack(SETS).sum(0)\n",
+    "\n",
+    "    if 1 not in check_covered_by_one:\n",
+    "        return State(set(),set(range(NUM_SETS)))\n",
+    "\n",
+    "    forced_list = [\n",
+    "        index\n",
+    "        for index, s in enumerate(SETS)\n",
+    "        if any(check_covered_by_one[i] == 1 and s[i] == True for i in range(PROBLEM_SIZE))\n",
+    "    ]\n",
+    "    return State(set(forced_list), set(range(NUM_SETS)) - set(forced_list))\n",
+    "\n",
+    "def set_sorting_preprocessing():\n",
+    "    return sorted(SETS,reverse=True,key=lambda e: sum(e)) #ordering respect ascending number of True is better\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +107,7 @@
     "    return ext\n",
     "\n",
     "def my_h(state,e):    \n",
-    "    return calc_overlap(state, e)+calc_extension(state,e)\n",
+    "    return calc_overlap_and_false_number(join_taken(state), e)+calc_extension(state,e)\n",
     "\n",
     "def my_h2(state):\n",
     "    joined_taken=join_taken(state)\n",
@@ -116,27 +125,27 @@
     "    return sets_still_needed    \n",
     "\n",
     "def f(state):\n",
-    "    # return len(state.taken)+my_h(state,e)\n",
-    "    return len(state.taken) + my_h2(state)"
+    "    return len(state[0].taken)+my_h(state[0],state[1])\n",
+    "    #return len(state.taken) + my_h2(state)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "9it [00:00, 474.93it/s]"
+      "1367it [00:00, 3775.54it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solved in 9 steps (4 tiles)\n"
+      "Solved in 1,367 steps (4 tiles)\n"
      ]
     },
     {
@@ -149,7 +158,13 @@
    ],
    "source": [
     "frontier = PriorityQueue()\n",
-    "state = State(set(), set(range(NUM_SETS)))\n",
+    "\n",
+    "if ENABLE_PREPROCESSING==True:\n",
+    "    state = forced_sets()\n",
+    "    SETS=set_sorting_preprocessing()\n",
+    "else:\n",
+    "    state = State(set(), set(range(NUM_SETS)))\n",
+    "    \n",
     "frontier.put((0, state))\n",
     "\n",
     "counter = 0\n",
@@ -157,12 +172,14 @@
     "with tqdm(total=None) as pbar:\n",
     "    while not goal_check(current_state):\n",
     "        counter += 1\n",
+    "        cost=f((current_state,action))\n",
     "        for action in current_state.not_taken:\n",
     "            new_state = State(\n",
     "                current_state.taken ^ {action},\n",
     "                current_state.not_taken ^ {action},\n",
     "            )\n",
-    "            frontier.put((f(new_state), new_state))\n",
+    "            #frontier.put((f(new_state), new_state))\n",
+    "            frontier.put((cost, new_state))\n",
     "        _, current_state = frontier.get()\n",
     "        pbar.update(1)\n",
     "\n",
@@ -171,16 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{3, 4, 5, 8}"
+       "{1, 4, 6, 8}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
