--- a/set-coverings-assignment/set-covering.ipynb
+++ b/set-coverings-assignment/set-covering.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,27 +125,27 @@
     "    return sets_still_needed    \n",
     "\n",
     "def f(state):\n",
-    "    return len(state[0].taken)+my_h(state[0],state[1])\n",
-    "    #return len(state.taken) + my_h2(state)"
+    "    #return len(state[0].taken)+my_h(state[0],state[1])\n",
+    "    return len(state.taken) + my_h2(state)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1367it [00:00, 3775.54it/s]"
+      "7it [00:00, 701.61it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solved in 1,367 steps (4 tiles)\n"
+      "Solved in 7 steps (3 tiles)\n"
      ]
     },
     {
@@ -172,14 +172,14 @@
     "with tqdm(total=None) as pbar:\n",
     "    while not goal_check(current_state):\n",
     "        counter += 1\n",
-    "        cost=f((current_state,action))\n",
+    "        #cost=f((current_state,action))\n",
     "        for action in current_state.not_taken:\n",
     "            new_state = State(\n",
     "                current_state.taken ^ {action},\n",
     "                current_state.not_taken ^ {action},\n",
     "            )\n",
-    "            #frontier.put((f(new_state), new_state))\n",
-    "            frontier.put((cost, new_state))\n",
+    "            frontier.put((f(new_state), new_state))\n",
+    "            #frontier.put((cost, new_state))\n",
     "        _, current_state = frontier.get()\n",
     "        pbar.update(1)\n",
     "\n",
@@ -188,16 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 375,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1, 4, 6, 8}"
+       "{1, 8, 9}"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 375,
      "metadata": {},
      "output_type": "execute_result"
     }
