--- a/HalloweenChallenge/HalloweenChallenge.ipynb
+++ b/HalloweenChallenge/HalloweenChallenge.ipynb
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\darda\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\halloweenchallenge-Ivtd8AKl-py3.12\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from itertools import product\n",
     "from random import random, randint, shuffle, seed\n",
@@ -36,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,14 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "problem_dim=100\n",
-    "num_sets=100\n",
+    "problem_dim=5000\n",
+    "num_sets=5000\n",
     "fitness_counter=0\n",
-    "x = make_set_covering_problem(problem_dim, num_sets, .3)\n"
+    "x = make_set_covering_problem(problem_dim, num_sets, .7)\n"
    ]
   },
   {
@@ -86,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,50 +100,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/95 [00:00<?, ?it/s]"
+      "  0%|          | 0/200 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 3/95 [00:00<00:18,  5.08it/s]"
+      "  0%|          | 1/200 [03:07<10:23:07, 187.88s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6 22\n"
+      "5 8\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 95/95 [00:18<00:00,  5.14it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 940\n",
-      "solution found in 948 calls,solution has length 5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "  1%|          | 2/200 [06:19<10:26:51, 189.96s/it]"
      ]
     }
    ],
@@ -193,7 +169,7 @@
     "actual_best_sol = None\n",
     "T_start=10000\n",
     "fitness_counter=0\n",
-    "n_run = 95\n",
+    "n_run = 200\n",
     "\n",
     "first_ind= randint(0, num_sets-1)\n",
     "current_state=([first_ind], get_set(first_ind))\n",
@@ -207,7 +183,7 @@
     "        T=T_start\n",
     "        new_state_eval= fitness(new_state[1])\n",
     "        current_state_eval = fitness(current_state[1])\n",
-    "        while step<=5 and (new_state_eval >= current_state_eval or np.exp(-(current_state_eval[1]-new_state_eval[1])/T)>random()) :\n",
+    "        while step<=15 and (new_state_eval >= current_state_eval or np.exp(-(current_state_eval[1]-new_state_eval[1])/T)>random()) :\n",
     "            if T==0:\n",
     "                print(\"ho freddo, temperatura a zero!!\")\n",
     "                break\n",
@@ -232,6 +208,23 @@
     "\n",
     "        pbar.update(1)  \n",
     "    print(f\"solution found in {fitness_counter} calls,solution has length {len(actual_best_sol)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[970, 760, 333, 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(actual_best_sol)"
    ]
   }
  ],
