--- a/HalloweenChallenge/HalloweenChallenge.ipynb
+++ b/HalloweenChallenge/HalloweenChallenge.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,14 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "problem_dim=5000\n",
-    "num_sets=5000\n",
+    "problem_dim=100\n",
+    "num_sets=100\n",
     "fitness_counter=0\n",
-    "x = make_set_covering_problem(problem_dim, num_sets, .7)\n"
+    "x = make_set_covering_problem(problem_dim, num_sets, .3)\n"
    ]
   },
   {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,35 +100,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/200 [00:00<?, ?it/s]"
+      "  0%|          | 0/1 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 1/200 [03:07<10:23:07, 187.88s/it]"
+      "100%|██████████| 1/1 [07:14<00:00, 434.38s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 8\n"
+      "13 13\n",
+      "solution found in 13 calls,solution has length 13\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|          | 2/200 [06:19<10:26:51, 189.96s/it]"
+      "\n"
      ]
     }
    ],
@@ -169,7 +170,7 @@
     "actual_best_sol = None\n",
     "T_start=10000\n",
     "fitness_counter=0\n",
-    "n_run = 200\n",
+    "n_run = 1\n",
     "\n",
     "first_ind= randint(0, num_sets-1)\n",
     "current_state=([first_ind], get_set(first_ind))\n",
@@ -195,8 +196,8 @@
     "\n",
     "                if d==0 or (actual_best_sol is not None and len(new_state[0])>=len(actual_best_sol)):\n",
     "                    break\n",
-    "                new_state_eval= fitness(new_state[1])\n",
-    "                current_state_eval = fitness(current_state[1])\n",
+    "                current_state_eval=new_state_eval\n",
+    "                new_state_eval = fitness(new_state[1])\n",
     "                T=1/np.log(1+step)*T\n",
     "        if d==0:\n",
     "            if actual_best_sol is None or len(new_state[0])<len(actual_best_sol):\n",
@@ -212,14 +213,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[970, 760, 333, 13]\n"
+      "[3260, 722, 616, 2229, 944, 979, 1067, 2433, 4242, 3060, 4881, 4446, 12]\n"
      ]
     }
    ],
