--- a/Nim/lab2-nim.ipynb
+++ b/Nim/lab2-nim.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1178,
+   "execution_count": 1221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1179,
+   "execution_count": 1222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1180,
+   "execution_count": 1223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1181,
+   "execution_count": 1224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1182,
+   "execution_count": 1225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1183,
+   "execution_count": 1226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1184,
+   "execution_count": 1227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1185,
+   "execution_count": 1228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,22 +197,27 @@
     "\n",
     "def mutate(ind):\n",
     "    new_prob=np.abs(np.random.normal(loc=ind[0],size=n_rules))\n",
-    "    print(\"sum before: {:.20f}\".format(sum(new_prob)))\n",
+    "    # print(\"sum before: {:.20f}\".format(sum(new_prob)))\n",
     "    new_prob=new_prob/sum(new_prob)\n",
-    "    print(\"sum aft: {:.20f}\".format(sum(new_prob)))\n",
-    "    return (new_prob,None)\n",
+    "    # print(\"sum aft: {:.20f}\".format(sum(new_prob)))\n",
+    "    return [new_prob,None]\n",
     "    \n",
     "def sorting_key(el):\n",
-    "    return float('inf') if el is None else el\n",
+    "    return float('-inf') if el is None else el\n",
     "\n",
-    "def select_best(pop):\n",
-    "    sorted_pop=sorted(pop,key=lambda e:sorting_key(e[1]))\n",
-    "    return sorted_pop\n"
+    "def select_best(pop,mu):\n",
+    "   return sorted(pop,key=lambda e:sorting_key(e[1]),reverse=True)[0:mu]\n",
+    "\n",
+    "def reset_fitness(pop):\n",
+    "    for i,p in enumerate(pop):\n",
+    "        pop[i][1]=None\n",
+    "    return pop\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1186,
+   "execution_count": 1229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,23 +225,35 @@
     "    \n",
     "    move=np.random.choice(3,p=ind[0])\n",
     "    if move==0:\n",
-    "        # removes a random number of matches from the bottom row\n",
-    "        row=state.rows[len(state.row)-1]\n",
-    "        return Nimply(row,np.randint(1,state.rows[row]))\n",
+    "        # print(\"scelgo 1\")\n",
+    "        # remove a random number of matches from the lowest row available\n",
+    "        row=np.nonzero(state.rows)[0]\n",
+    "        # pprint(f\"rows{row}\")\n",
+    "        # pprint(f\"last_index_not_empty:{row[len(row)-1]}\")\n",
+    "        index=row[len(row)-1]\n",
+    "        # pprint(f\"num_of_obj_ind_last_index_not_empty:{state.rows[index]}\")\n",
+    "        max_obj=state.rows[index]\n",
+    "        if max_obj>1:\n",
+    "            num_obj=np.random.randint(1,max_obj+1)\n",
+    "        else:\n",
+    "            num_obj=1\n",
+    "        return Nimply(index,num_obj)\n",
     "    elif move==1:\n",
+    "        # print(\"scelgo 2\")\n",
     "        # removes one match from the higher row available\n",
-    "        row=np.argmax(state.rows!=0)\n",
-    "        return Nimply(row,1)\n",
+    "        row=np.nonzero(state.rows)\n",
+    "        return Nimply(row[0][0],1)\n",
     "    elif move==2:\n",
+    "        # print(\"scelgo 3 \")\n",
     "        # removes the maximum number of matches from a random row\n",
-    "        row=np.randint(1,len(stae.rows)-1)\n",
+    "        row=np.random.randint(1,len(state.rows))\n",
     "        return Nimply(row,state.rows[row])\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1187,
+   "execution_count": 1230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,64 +275,65 @@
     "        # logging.info(f\"status: {nim}\")\n",
     "        player = 1 - player\n",
     "    if player==0:\n",
-    "        ind[1]=ind[1]+1\n",
+    "        if ind[1] is None:\n",
+    "            ind[1]=1\n",
+    "        else:\n",
+    "            ind[1]+=1\n",
     "    # logging.info(f\"status: Player {player} won!\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1188,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1231,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sum before: 2.03459139121234144909\n",
-      "sum aft: 1.00000000000000000000\n",
-      "sum before: 1.72586633901776531630\n",
-      "sum aft: 1.00000000000000000000\n",
-      "'figli generati'\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "probabilities do not sum to 1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\darda\\Desktop\\CI\\computational_intelligence_mine\\Nim\\lab2-nim.ipynb Cell 16\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Nim/lab2-nim.ipynb#X16sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     pprint(\u001b[39m\"\u001b[39m\u001b[39mfigli generati\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Nim/lab2-nim.ipynb#X16sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     \u001b[39mfor\u001b[39;00m ind \u001b[39min\u001b[39;00m pop:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Nim/lab2-nim.ipynb#X16sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m         \u001b[39m# play a game\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Nim/lab2-nim.ipynb#X16sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m         play_game(ind,make_move1)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Nim/lab2-nim.ipynb#X16sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m pprint(pop)\n",
-      "\u001b[1;32mc:\\Users\\darda\\Desktop\\CI\\computational_intelligence_mine\\Nim\\lab2-nim.ipynb Cell 16\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Nim/lab2-nim.ipynb#X16sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mwhile\u001b[39;00m nim:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Nim/lab2-nim.ipynb#X16sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39mif\u001b[39;00m player\u001b[39m==\u001b[39m\u001b[39m0\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Nim/lab2-nim.ipynb#X16sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m         ply \u001b[39m=\u001b[39m strategy[player](ind,nim)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Nim/lab2-nim.ipynb#X16sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Nim/lab2-nim.ipynb#X16sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m         ply \u001b[39m=\u001b[39m strategy[player](nim)\n",
-      "\u001b[1;32mc:\\Users\\darda\\Desktop\\CI\\computational_intelligence_mine\\Nim\\lab2-nim.ipynb Cell 16\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Nim/lab2-nim.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmake_move1\u001b[39m(ind,state)\u001b[39m-\u001b[39m\u001b[39m>\u001b[39mNimply:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Nim/lab2-nim.ipynb#X16sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     move\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39;49mrandom\u001b[39m.\u001b[39;49mchoice(\u001b[39m3\u001b[39;49m,p\u001b[39m=\u001b[39;49mind[\u001b[39m0\u001b[39;49m])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Nim/lab2-nim.ipynb#X16sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mif\u001b[39;00m move\u001b[39m==\u001b[39m\u001b[39m0\u001b[39m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Nim/lab2-nim.ipynb#X16sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m         \u001b[39m# removes a random number of matches from the bottom row\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Nim/lab2-nim.ipynb#X16sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m         row\u001b[39m=\u001b[39mstate\u001b[39m.\u001b[39mrows[\u001b[39mlen\u001b[39m(state\u001b[39m.\u001b[39mrow)\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n",
-      "File \u001b[1;32mnumpy\\\\random\\\\mtrand.pyx:974\u001b[0m, in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: probabilities do not sum to 1"
+      "[[array([0.03748732, 0.35599766, 0.60651503]), 1],\n",
+      " [array([0.07779756, 0.10831816, 0.81388428]), 1],\n",
+      " [array([0.11135574, 0.22481403, 0.66383023]), 1],\n",
+      " [array([0.0181504 , 0.41325667, 0.56859293]), 1],\n",
+      " [array([0.35051519, 0.18625972, 0.46322508]), 1],\n",
+      " [array([0.37266598, 0.09443333, 0.53290069]), 1],\n",
+      " [array([0.40467437, 0.14750475, 0.44782088]), 1],\n",
+      " [array([0.15833965, 0.19384421, 0.64781614]), 1]]\n"
      ]
     }
    ],
    "source": [
-    "n_gen=1\n",
-    "n_games=10 \n",
-    "mu=1\n",
-    "λ=2\n",
-    "pop=[([0.0 for _ in range(n_rules)],None) for m in range(mu)]\n",
+    "n_gen=200\n",
+    "n_games=300\n",
+    "mu=8\n",
+    "λ=32\n",
+    "pop=[[[ np.float64(1/n_rules) for _ in range(n_rules)],None] for m in range(mu)]\n",
+    "\n",
     "\n",
     "for gen in range(n_gen):\n",
-    "    # select best parent(top λ)\n",
-    "    for m in range(mu):\n",
-    "        parents=select_best(pop)\n",
-    "\n",
-    "    for p in range(len(parents)):\n",
+    "    pop=reset_fitness(pop)\n",
+    "    for p in range(len(pop)):\n",
     "        for i in range(λ//mu):\n",
-    "            pop.append(mutate(parents[p]))\n",
+    "            pop.append(mutate(pop[p]))\n",
     "\n",
-    "    pprint(\"figli generati\")\n",
-    "    \n",
     "    for ind in pop:\n",
     "        # play a game\n",
     "        play_game(ind,make_move1)\n",
     "\n",
-    "pprint(pop)"
+    "    # pprint(f\"gen:{gen},before selection,pop{pop}\")\n",
+    "    pop=select_best(pop,mu)\n",
+    "    # pprint(f\"gen:{gen},after selection,pop:{pop}\")\n",
+    "    \n",
+    "\n",
+    "\n",
+    "pprint(pop)\n"
    ]
   },
   {
