--- a/Lab2/lab2-nim.ipynb
+++ b/Lab2/lab2-nim.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1221,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,10 @@
     "from collections import namedtuple\n",
     "import random\n",
     "from copy import deepcopy\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "n_rules=3\n"
    ]
   },
   {
@@ -67,16 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1222,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Nimply = namedtuple(\"Nimply\", \"row, num_objects\")\n"
+    "Nimply = namedtuple(\"Nimply\", \"row, num_objects\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1223,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1224,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1225,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1226,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1227,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,54 +187,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## (μ+λ) ES-Training"
+    "## Self-Adaptive (μ+λ) ES-Training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1228,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_rules=3\n",
     "\n",
     "def mutate(ind):\n",
-    "    new_prob=np.abs(np.random.normal(loc=ind[0],size=n_rules))\n",
-    "    # print(\"sum before: {:.20f}\".format(sum(new_prob)))\n",
-    "    new_prob=new_prob/sum(new_prob)\n",
-    "    # print(\"sum aft: {:.20f}\".format(sum(new_prob)))\n",
-    "    return [new_prob,None]\n",
+    "    new_prob=np.abs(np.random.normal(loc=ind[0],size=n_rules,scale=ind[2]))\n",
+    "    return [new_prob,0,ind[2]]\n",
     "    \n",
-    "def sorting_key(el):\n",
-    "    return float('-inf') if el is None else el\n",
+    "def update_sigma(ind):\n",
+    "    new_sigma=np.abs(np.random.normal(loc=ind[2],scale=0.2))\n",
+    "    return [ind[0],ind[1],new_sigma]\n",
     "\n",
     "def select_best(pop,mu):\n",
-    "   return sorted(pop,key=lambda e:sorting_key(e[1]),reverse=True)[0:mu]\n",
+    "   return sorted(pop,key=lambda e:e[1],reverse=True)[0:mu]\n",
     "\n",
     "def reset_fitness(pop):\n",
     "    for i,p in enumerate(pop):\n",
-    "        pop[i][1]=None\n",
+    "        pop[i][1]=0\n",
     "    return pop\n",
+    "\n",
+    "def get_max(pop):\n",
+    "    fitness_val=[]\n",
+    "    for i,el in enumerate(pop):\n",
+    "        fitness_val.append(pop[i][1])\n",
+    "    best_fit=np.argmax(fitness_val)\n",
+    "    return pop[best_fit]\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1229,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_move1(ind,state)->Nimply:\n",
-    "    \n",
-    "    move=np.random.choice(3,p=ind[0])\n",
+    "    # normalizing to transform in probabilities\n",
+    "    ind[0]=ind[0]/sum(ind[0])\n",
+    "    move=np.random.choice(len(ind[0]),p=ind[0])\n",
+    "\n",
     "    if move==0:\n",
-    "        # print(\"scelgo 1\")\n",
     "        # remove a random number of matches from the lowest row available\n",
     "        row=np.nonzero(state.rows)[0]\n",
-    "        # pprint(f\"rows{row}\")\n",
-    "        # pprint(f\"last_index_not_empty:{row[len(row)-1]}\")\n",
     "        index=row[len(row)-1]\n",
-    "        # pprint(f\"num_of_obj_ind_last_index_not_empty:{state.rows[index]}\")\n",
     "        max_obj=state.rows[index]\n",
     "        if max_obj>1:\n",
     "            num_obj=np.random.randint(1,max_obj+1)\n",
@@ -239,27 +244,72 @@
     "            num_obj=1\n",
     "        return Nimply(index,num_obj)\n",
     "    elif move==1:\n",
-    "        # print(\"scelgo 2\")\n",
     "        # removes one match from the higher row available\n",
     "        row=np.nonzero(state.rows)\n",
     "        return Nimply(row[0][0],1)\n",
     "    elif move==2:\n",
-    "        # print(\"scelgo 3 \")\n",
     "        # removes the maximum number of matches from a random row\n",
-    "        row=np.random.randint(1,len(state.rows))\n",
+    "        index=np.nonzero(state.rows)[0]\n",
+    "        row= np.random.choice(index)\n",
     "        return Nimply(row,state.rows[row])\n",
+    "    elif move==3:\n",
+    "        # removes an odd number of matches from a random row \n",
+    "        index=np.nonzero(state.rows)[0]\n",
+    "        row=np.random.choice(index)\n",
+    "        if state.rows[row]>1:\n",
+    "            num_obj=np.random.randint(1,state.rows[row]+1)\n",
+    "        else:\n",
+    "            num_obj=1\n",
+    "        return Nimply(row,num_obj)\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1230,
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_move2(ind,state)->Nimply:\n",
+    "    # normalizing to transform in probabilities\n",
+    "    ind[0]=ind[0]/sum(ind[0])\n",
+    "    move=np.random.choice(3,p=ind[0])\n",
+    "    \n",
+    "    if move==0:\n",
+    "        # remove a random number of matches from the lowest row available\n",
+    "        row=np.nonzero(state.rows)[0]\n",
+    "        index=row[len(row)-1]\n",
+    "        max_obj=state.rows[index]\n",
+    "        if max_obj>1:\n",
+    "            num_obj=np.random.randint(1,max_obj+1)\n",
+    "        else:\n",
+    "            num_obj=1\n",
+    "        return Nimply(index,num_obj)\n",
+    "    elif move==1:\n",
+    "        # removes one match from the higher row available\n",
+    "        row=np.nonzero(state.rows)\n",
+    "        return Nimply(row[0][0],1)\n",
+    "    elif move==2:\n",
+    "        # golden rule\n",
+    "        analysis = analize(state)\n",
+    "        spicy_moves = [ply for ply, ns in analysis[\"possible_moves\"].items() if ns != 0]\n",
+    "        if not spicy_moves:\n",
+    "            spicy_moves = list(analysis[\"possible_moves\"].keys())\n",
+    "        ply = random.choice(spicy_moves)\n",
+    "        return ply\n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
     "def play_game(ind,my_strategy):\n",
     "    # logging.getLogger().setLevel(logging.INFO)\n",
-    "\n",
+    "    \n",
     "    strategy = (my_strategy, optimal)\n",
     "\n",
     "    nim = Nim(5)\n",
@@ -275,94 +325,65 @@
     "        # logging.info(f\"status: {nim}\")\n",
     "        player = 1 - player\n",
     "    if player==0:\n",
-    "        if ind[1] is None:\n",
-    "            ind[1]=1\n",
-    "        else:\n",
-    "            ind[1]+=1\n",
+    "        ind[1]+=1\n",
     "    # logging.info(f\"status: Player {player} won!\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1231,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2458324ac49440b6899d0e4699403235",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[array([0.03748732, 0.35599766, 0.60651503]), 1],\n",
-      " [array([0.07779756, 0.10831816, 0.81388428]), 1],\n",
-      " [array([0.11135574, 0.22481403, 0.66383023]), 1],\n",
-      " [array([0.0181504 , 0.41325667, 0.56859293]), 1],\n",
-      " [array([0.35051519, 0.18625972, 0.46322508]), 1],\n",
-      " [array([0.37266598, 0.09443333, 0.53290069]), 1],\n",
-      " [array([0.40467437, 0.14750475, 0.44782088]), 1],\n",
-      " [array([0.15833965, 0.19384421, 0.64781614]), 1]]\n"
+      "[array([0.05875954, 0.19680397, 0.7444365 ]), 51, 1.0338522370398953]\n"
      ]
     }
    ],
    "source": [
-    "n_gen=200\n",
-    "n_games=300\n",
-    "mu=8\n",
-    "λ=32\n",
-    "pop=[[[ np.float64(1/n_rules) for _ in range(n_rules)],None] for m in range(mu)]\n",
+    "n_gen=5\n",
+    "n_games=100\n",
+    "mu=10\n",
+    "λ=40\n",
+    "best=0\n",
     "\n",
+    "#  initial probabilities,fitness,sigma\n",
+    "pop=[[[ np.float64(1/n_rules) for _ in range(n_rules)],0,1] for m in range(mu)]\n",
     "\n",
-    "for gen in range(n_gen):\n",
+    "for gen in tqdm(range(n_gen)):\n",
     "    pop=reset_fitness(pop)\n",
+    "    \n",
     "    for p in range(len(pop)):\n",
+    "        pop[p]=update_sigma(pop[p])\n",
     "        for i in range(λ//mu):\n",
     "            pop.append(mutate(pop[p]))\n",
     "\n",
     "    for ind in pop:\n",
-    "        # play a game\n",
-    "        play_game(ind,make_move1)\n",
-    "\n",
-    "    # pprint(f\"gen:{gen},before selection,pop{pop}\")\n",
-    "    pop=select_best(pop,mu)\n",
-    "    # pprint(f\"gen:{gen},after selection,pop:{pop}\")\n",
+    "        for game in range(n_games):\n",
+    "            # play a game\n",
+    "            play_game(ind,make_move2)\n",
     "    \n",
-    "\n",
-    "\n",
-    "pprint(pop)\n"
+    "    pop=select_best(pop,mu)\n",
+    "    gen_best=get_max(pop)\n",
+    "    best=gen_best if best==0 or gen_best[1]>best[1] else best\n",
+    "pprint(best)\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Oversimplified match"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
