--- a/Lab2/lab2-nim.ipynb
+++ b/Lab2/lab2-nim.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,11 +54,11 @@
     "from pprint import pprint, pformat\n",
     "from collections import namedtuple\n",
     "import random\n",
-    "from copy import deepcopy\n",
+    "from copy import deepcopy,copy\n",
     "import numpy as np\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
-    "n_rules=3\n"
+    "n_rules=4\n"
    ]
   },
   {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,8 +201,13 @@
     "    new_prob=np.abs(np.random.normal(loc=ind[0],size=n_rules,scale=ind[2]))\n",
     "    return [new_prob,0,ind[2]]\n",
     "    \n",
-    "def update_sigma(ind):\n",
-    "    new_sigma=np.abs(np.random.normal(loc=ind[2],scale=0.2))\n",
+    "def update_sigma(ind,mu):\n",
+    "    sigma_exp=np.exp((1/np.sqrt(mu))*np.random.normal(size=n_rules))\n",
+    "    new_sigma=[sigma_exp[i]*ind[2][i] for i in range(n_rules)]\n",
+    "\n",
+    "    # alternative way to update sigmas\n",
+    "    # new_sigma=np.abs(np.random.normal(loc=ind[2],size=n_rules,scale=0.2))\n",
+    "\n",
     "    return [ind[0],ind[1],new_sigma]\n",
     "\n",
     "def select_best(pop,mu):\n",
@@ -224,13 +229,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_move1(ind,state)->Nimply:\n",
     "    # normalizing to transform in probabilities\n",
     "    ind[0]=ind[0]/sum(ind[0])\n",
+    "    # roulette wheel selection with probability \n",
     "    move=np.random.choice(len(ind[0]),p=ind[0])\n",
     "\n",
     "    if move==0:\n",
@@ -257,7 +263,7 @@
     "        index=np.nonzero(state.rows)[0]\n",
     "        row=np.random.choice(index)\n",
     "        if state.rows[row]>1:\n",
-    "            num_obj=np.random.randint(1,state.rows[row]+1)\n",
+    "            num_obj=int(np.random.choice([i for i in range(state.rows[row]) if i%2!=0]))\n",
     "        else:\n",
     "            num_obj=1\n",
     "        return Nimply(row,num_obj)\n",
@@ -266,13 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_move2(ind,state)->Nimply:\n",
     "    # normalizing to transform in probabilities\n",
     "    ind[0]=ind[0]/sum(ind[0])\n",
+    "    # roulette wheel selection with probability \n",
     "    move=np.random.choice(3,p=ind[0])\n",
     "    \n",
     "    if move==0:\n",
@@ -303,46 +310,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def play_game(ind,my_strategy):\n",
-    "    # logging.getLogger().setLevel(logging.INFO)\n",
-    "    \n",
     "    strategy = (my_strategy, optimal)\n",
-    "\n",
     "    nim = Nim(5)\n",
-    "    # logging.info(f\"init : {nim}\")\n",
     "    player = 0\n",
     "    while nim:\n",
     "        if player==0:\n",
     "            ply = strategy[player](ind,nim)\n",
     "        else:\n",
     "            ply = strategy[player](nim)\n",
-    "        # logging.info(f\"ply: player {player} plays {ply}\")\n",
     "        nim.nimming(ply)\n",
-    "        # logging.info(f\"status: {nim}\")\n",
     "        player = 1 - player\n",
     "    if player==0:\n",
-    "        ind[1]+=1\n",
-    "    # logging.info(f\"status: Player {player} won!\")\n"
+    "        ind[1]+=1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2458324ac49440b6899d0e4699403235",
+       "model_id": "ff7b047b58094c6884901c6b84706c4a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/5 [00:00<?, ?it/s]"
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -352,37 +352,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([0.05875954, 0.19680397, 0.7444365 ]), 51, 1.0338522370398953]\n"
+      "'best at generation:1 is: 36'\n",
+      "'best at generation:2 is: 35'\n",
+      "'best at generation:3 is: 36'\n",
+      "('overall best:[array([0.45265998, 0.06587725, 0.25218072, 0.22928205]), 36, '\n",
+      " '[1.2781905746140962, 1.351507083466337, 1.4342708846807237, '\n",
+      " '1.129450588377484]]')\n"
      ]
     }
    ],
    "source": [
-    "n_gen=5\n",
+    "n_gen=3\n",
     "n_games=100\n",
     "mu=10\n",
-    "λ=40\n",
-    "best=0\n",
+    "λ=20\n",
+    "best=[0.0,0.0,0.0]\n",
     "\n",
-    "#  initial probabilities,fitness,sigma\n",
-    "pop=[[[ np.float64(1/n_rules) for _ in range(n_rules)],0,1] for m in range(mu)]\n",
+    "#  initial probabilities,fitness,sigmas(one for each rule)\n",
+    "pop=[[[ np.float64(1/n_rules) for _ in range(n_rules)],0,[1.0 for _ in range(n_rules)]] for m in range(mu)]\n",
     "\n",
     "for gen in tqdm(range(n_gen)):\n",
     "    pop=reset_fitness(pop)\n",
     "    \n",
     "    for p in range(len(pop)):\n",
-    "        pop[p]=update_sigma(pop[p])\n",
+    "        pop[p]=update_sigma(pop[p],mu)\n",
     "        for i in range(λ//mu):\n",
     "            pop.append(mutate(pop[p]))\n",
     "\n",
     "    for ind in pop:\n",
     "        for game in range(n_games):\n",
     "            # play a game\n",
-    "            play_game(ind,make_move2)\n",
+    "            play_game(ind,make_move1)\n",
     "    \n",
     "    pop=select_best(pop,mu)\n",
     "    gen_best=get_max(pop)\n",
-    "    best=gen_best if best==0 or gen_best[1]>best[1] else best\n",
-    "pprint(best)\n"
+    "\n",
+    "    pprint(f\"best at generation:{gen+1} is: {gen_best[1]}\")\n",
+    "    best=copy(gen_best) if gen_best[1]>best[1] else copy(best)\n",
+    "    \n",
+    "pprint(f\"overall best:{best}\")\n"
    ]
   }
  ],
