--- a/Lab2/lab2-nim.ipynb
+++ b/Lab2/lab2-nim.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,18 +331,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff7b047b58094c6884901c6b84706c4a",
+       "model_id": "0ad295b4d512403e8f5f18e1c33160cd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/3 [00:00<?, ?it/s]"
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -352,19 +359,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'best at generation:1 is: 36'\n",
-      "'best at generation:2 is: 35'\n",
-      "'best at generation:3 is: 36'\n",
-      "('overall best:[array([0.45265998, 0.06587725, 0.25218072, 0.22928205]), 36, '\n",
-      " '[1.2781905746140962, 1.351507083466337, 1.4342708846807237, '\n",
-      " '1.129450588377484]]')\n"
+      "'best at generation:1 is: 35'\n",
+      "'best at generation:2 is: 38'\n",
+      "'best at generation:3 is: 34'\n",
+      "'best at generation:4 is: 37'\n",
+      "'best at generation:5 is: 35'\n",
+      "'best at generation:6 is: 36'\n",
+      "'best at generation:7 is: 35'\n",
+      "'best at generation:8 is: 34'\n",
+      "'best at generation:9 is: 40'\n",
+      "'best at generation:10 is: 36'\n",
+      "('overall best:[array([0.13976295, 0.04262336, 0.04545111, 0.77216258]), 40, '\n",
+      " '[0.38228483179836975, 0.22672031645825946, 0.2964887802258556, '\n",
+      " '0.3979630289513325]]')\n"
      ]
     }
    ],
    "source": [
-    "n_gen=3\n",
+    "n_gen=10\n",
     "n_games=100\n",
-    "mu=10\n",
+    "mu=5\n",
     "λ=20\n",
     "best=[0.0,0.0,0.0]\n",
     "\n",
@@ -376,8 +390,12 @@
     "    \n",
     "    for p in range(len(pop)):\n",
     "        pop[p]=update_sigma(pop[p],mu)\n",
+    "\n",
+    "    for p in range(mu):\n",
+    "        # random parent selection\n",
+    "        parent=pop[np.random.randint(0,len(pop))]\n",
     "        for i in range(λ//mu):\n",
-    "            pop.append(mutate(pop[p]))\n",
+    "            pop.append(mutate(parent))\n",
     "\n",
     "    for ind in pop:\n",
     "        for game in range(n_games):\n",
