--- a/Lab9/lab9.ipynb
+++ b/Lab9/lab9.ipynb
@@ -30,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from random import choices,random,randint,sample\n",
+    "from random import choices,random,randint,sample,shuffle\n",
     "from copy import copy\n",
     "import numpy as np\n",
     "import lab9_lib\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,19 +58,14 @@
     "\n",
     "GENES_PER_LOCUS = 1\n",
     "GENOME_LENGHT=1000*GENES_PER_LOCUS\n",
-    "POP_DIM= 1000\n",
-    "OFFSPRING_SIZE = 600\n",
-    "N_GENERATIONS = 1000\n",
-    "N_GENS_WO_IMPROVEMENT_EXTINCTION = 10\n",
+    "POP_DIM= 500\n",
+    "OFFSPRING_SIZE = 300\n",
+    "N_GENERATIONS = 1_000_000\n",
+    "N_GENS_WO_IMPROVEMENT_EXTINCTION = 5\n",
     "MUTATION_PROB = 0.2\n",
     "\n",
-    "fitness = lab9_lib.make_problem(PROBLEM_DIM)\n",
     "\n",
-    "# for n in range(10):\n",
-    "#     ind = choices([0, 1], k=50)\n",
-    "#     print(f\"{''.join(str(g) for g in ind)}: {fitness(ind):.2%}\")\n",
-    "\n",
-    "# print(fitness.calls)"
+    "fitness = lab9_lib.make_problem(PROBLEM_DIM)\n"
    ]
   },
   {
@@ -82,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +95,7 @@
     "    def __init__(self, genome):\n",
     "        self.genome = genome\n",
     "        self.fitness = fitness(genome)\n",
+    "        # self.gender=gender\n",
     "    \n",
     "    def get_genome(self):\n",
     "        return self.genome\n",
@@ -109,7 +105,7 @@
     "\n",
     "    def update_fitness(self,upd_fit):\n",
     "        self.fitness = upd_fit \n",
-    "\n",
+    "        \n",
     "    def set_genome_update_fitness(self, genome):\n",
     "        self.genome = genome\n",
     "        self.fitness = fitness(genome)"
@@ -124,17 +120,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def one_cut_xover(g1, g2):\n",
-    "    cut = randint(0, GENOME_LENGHT)\n",
-    "    joined = g1.get_genome()[:cut] + g2.get_genome()[cut:]\n",
-    "    return Individual(joined)\n",
     "\n",
-    "\n",
-    "def two_cut_xover(g1, g2):\n",
+    "def two_cut_xover_with_mut(g1, g2):\n",
     "    cut1 = randint(0, GENOME_LENGHT)\n",
     "    cut2 = randint(0, GENOME_LENGHT)\n",
     "    if cut1 > cut2:\n",
@@ -142,6 +133,10 @@
     "    joined = (\n",
     "        g1.get_genome()[:cut1] + g2.get_genome()[cut1:cut2] + g1.get_genome()[cut2:]\n",
     "    )\n",
+    "    mut_prob=1/GENOME_LENGHT\n",
+    "    for i in range(GENOME_LENGHT):\n",
+    "        if random() < mut_prob:\n",
+    "            joined[i] = 1 - joined[i]\n",
     "    return Individual(joined)\n",
     "\n",
     "\n",
@@ -156,7 +151,6 @@
     "    # Bit Flip Mutation\n",
     "    mut_prob=1/GENOME_LENGHT\n",
     "    genome = g.get_genome()\n",
-    "    old_genome=g.get_genome()\n",
     "    for i in range(GENOME_LENGHT):\n",
     "        if random() < mut_prob:\n",
     "            genome[i] = 1 - genome[i]\n",
@@ -169,10 +163,6 @@
     "        pop.remove(i)\n",
     "    pop += [Individual(choices([0, 1], k=GENOME_LENGHT)) for _ in range(POP_DIM-to_keep)]\n",
     "    return pop\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "def two_level_diversity_selection(pop, n_best):\n",
     "    # first select individuals respect to the fitness value,\n",
@@ -198,114 +188,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "def compute_pop_entropy(pop):\n",
-    "    # compute population entropy\n",
-    "    # to avod numerical problems, we add a small value (1e-10) to the probability\n",
-    "    concat=[pop[i].get_genome() for i in range(len(pop))][0]\n",
-    "    bincount=np.bincount(concat)\n",
-    "    bin_prob=bincount / len(concat)\n",
-    "    entropy = -sum([p * np.log2(p+1e-10) for p in bin_prob ])\n",
-    "    return entropy\n",
-    "\n",
-    "def entropy_stocastic_selection(pop):\n",
-    "    max_entropy = -1\n",
-    "    candidates = sample(range(len(pop)), k=30)\n",
-    "    candidates = [pop[i] for i in candidates]\n",
-    "    candidates=sorted(candidates, key=lambda i: i.get_fitness(), reverse=True)[:3]\n",
-    "    for i in range(len(candidates)):\n",
-    "        for j in range(i + 1, len(candidates)):\n",
-    "            copy_pop = copy(pop)\n",
-    "            new_ind=two_cut_xover(candidates[i], candidates[j]) # crossover\n",
-    "            copy_pop.append(new_ind)\n",
-    "            new_etr=compute_pop_entropy(copy_pop)\n",
-    "\n",
-    "            if new_etr > max_entropy:\n",
-    "                max_entropy = new_etr\n",
-    "                best_ind = new_ind\n",
-    "    return best_ind\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def apply_fitness_penalty(pop,off):\n",
-    "    # apply a penalty to the fitness of the individuals\n",
-    "    # this is done to avoid that all individuals have the same fitness\n",
-    "    radius=10\n",
-    "    alpha=1.5 #alpha>0\n",
-    "    beta=2.5  #beta>1\n",
-    "    pop=sorted(pop, key=lambda i: i.get_fitness(), reverse=True)\n",
-    "    off_ind=pop.index(off)\n",
-    "    if off_ind<radius:\n",
-    "        min_ind=0\n",
-    "    else:\n",
-    "        min_ind=off_ind-radius\n",
-    "    if off_ind+radius>len(pop)-1:\n",
-    "        max_ind=len(pop)\n",
-    "    else:\n",
-    "        max_ind=off_ind+radius\n",
-    "    for i in range(min_ind,max_ind):\n",
-    "       dist=hamming_distance(pop[i].get_genome(),off.get_genome())\n",
-    "       if dist<10:\n",
-    "            pen=(1-(pop[i].get_fitness()/radius)**alpha)\n",
-    "            new_fitness=(pop[i].get_fitness()**beta)/pen\n",
-    "    return pop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 0: 60.80%, entropy: 0.9997114414642708\n",
-      "Generation 1: 63.50%, entropy: 0.9660780973066864\n",
-      "Generation 2: 64.90%, entropy: 0.9467554493946542\n",
-      "Generation 3: 67.10%, entropy: 0.9349579705152063\n",
-      "Generation 4: 68.90%, entropy: 0.9139014132043304\n",
-      "Generation 5: 69.90%, entropy: 0.8943244158696739\n",
-      "Generation 6: 71.20%, entropy: 0.8825098585514477\n",
-      "Generation 7: 71.90%, entropy: 0.8661236811100869\n",
-      "Generation 8: 72.60%, entropy: 0.8568098048356128\n",
-      "Generation 9: 73.00%, entropy: 0.8471460078574488\n",
-      "Generation 10: 73.20%, entropy: 0.8414646359196365\n",
-      "Generation 11: 73.40%, entropy: 0.8385800997069459\n",
-      "Generation 12: 73.40%, entropy: 0.8356661469433135\n",
-      "Generation 13: 73.40%, entropy: 0.8356661469433135\n",
-      "Generation 14: 73.40%, entropy: 0.8356661469433135\n",
-      "Generation 15: 73.40%, entropy: 0.8356661469433135\n",
-      "Generation 16: 73.40%, entropy: 0.8356661469433135\n",
-      "Generation 17: 73.40%, entropy: 0.8356661469433135\n",
-      "Generation 18: 73.40%, entropy: 0.8356661469433135\n",
-      "Generation 19: 73.40%, entropy: 0.8356661469433135\n",
-      "Generation 20: 73.40%, entropy: 0.8356661469433135\n",
-      "Generation 21: 73.40%, entropy: 0.8356661469433135\n",
-      "Extinction!\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\darda\\Desktop\\CI\\computational_intelligence_mine\\Lab9\\lab9.ipynb Cell 13\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Lab9/lab9.ipynb#X15sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mExtinction!\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Lab9/lab9.ipynb#X15sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     to_keep\u001b[39m=\u001b[39m\u001b[39msorted\u001b[39m(pop, key\u001b[39m=\u001b[39m\u001b[39mlambda\u001b[39;00m i: i\u001b[39m.\u001b[39mget_fitness(), reverse\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)[:\u001b[39m10\u001b[39m]\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Lab9/lab9.ipynb#X15sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     pop\u001b[39m=\u001b[39mto_keep\u001b[39m+\u001b[39mextinction(pop[\u001b[39m10\u001b[39;49m:],to_keep\u001b[39m=\u001b[39;49m\u001b[39m10\u001b[39;49m) \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Lab9/lab9.ipynb#X15sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39m# if entropy_gen<0.65:\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Lab9/lab9.ipynb#X15sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39m#     to_keep=sorted(pop, key=lambda i: i.get_fitness(), reverse=True)[:500]\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Lab9/lab9.ipynb#X15sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39m#     pop=to_keep+extinction(pop[500:],to_keep=500) \u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Lab9/lab9.ipynb#X15sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39m#     print(\"PP\",len(pop))\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Lab9/lab9.ipynb#X15sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m \u001b[39mfor\u001b[39;00m off \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(OFFSPRING_SIZE):\n",
-      "\u001b[1;32mc:\\Users\\darda\\Desktop\\CI\\computational_intelligence_mine\\Lab9\\lab9.ipynb Cell 13\u001b[0m line \u001b[0;36m4\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Lab9/lab9.ipynb#X15sZmlsZQ%3D%3D?line=37'>38</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m to_remove:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Lab9/lab9.ipynb#X15sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m     pop\u001b[39m.\u001b[39mremove(i)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Lab9/lab9.ipynb#X15sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m pop \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m [Individual(choices([\u001b[39m0\u001b[39;49m, \u001b[39m1\u001b[39;49m], k\u001b[39m=\u001b[39;49mGENOME_LENGHT)) \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(POP_DIM\u001b[39m-\u001b[39mto_keep)]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/darda/Desktop/CI/computational_intelligence_mine/Lab9/lab9.ipynb#X15sZmlsZQ%3D%3D?line=40'>41</a>\u001b[0m \u001b[39mreturn\u001b[39;00m pop\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\random.py:467\u001b[0m, in \u001b[0;36mRandom.choices\u001b[1;34m(self, population, weights, cum_weights, k)\u001b[0m\n\u001b[0;32m    465\u001b[0m     floor \u001b[39m=\u001b[39m _floor\n\u001b[0;32m    466\u001b[0m     n \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0.0\u001b[39m    \u001b[39m# convert to float for a small speed improvement\u001b[39;00m\n\u001b[1;32m--> 467\u001b[0m     \u001b[39mreturn\u001b[39;00m [population[floor(random() \u001b[39m*\u001b[39m n)] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m _repeat(\u001b[39mNone\u001b[39;00m, k)]\n\u001b[0;32m    468\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m    469\u001b[0m     cum_weights \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(_accumulate(weights))\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "Generation 0: 54.70%, entropy: 2.208290327345859\n",
+      "Generation 1: 54.70%, entropy: 6.838750271403668\n",
+      "Generation 2: 54.70%, entropy: 12.527605218653298\n",
+      "Generation 3: 55.40%, entropy: 16.796695569682964\n",
+      "Generation 4: 55.50%, entropy: 18.305254747446043\n",
+      "Generation 5: 55.50%, entropy: 18.730858137964596\n",
+      "Generation 6: 55.50%, entropy: 18.730858137964596\n",
+      "Generation 7: 55.50%, entropy: 18.730858137964596\n",
+      "Generation 8: 55.50%, entropy: 18.730858137964596\n",
+      "Generation 9: 55.50%, entropy: 18.730858137964596\n",
+      "Extinction!\n",
+      "Generation 10: 55.80%, entropy: 2.335163816769232\n",
+      "Generation 11: 55.90%, entropy: 6.248283429861237\n",
+      "Generation 12: 55.90%, entropy: 13.685447704399143\n",
+      "Generation 13: 55.90%, entropy: 17.062171159877906\n",
+      "Generation 14: 55.90%, entropy: 17.062171159877906\n",
+      "Generation 15: 55.90%, entropy: 17.081229848576672\n",
+      "Generation 16: 55.90%, entropy: 17.12591629478242\n",
+      "Extinction!\n",
+      "Generation 17: 55.90%, entropy: 2.2305261977071282\n",
+      "Generation 18: 55.90%, entropy: 5.7141676418476415\n",
+      "Generation 19: 55.90%, entropy: 10.866654995427334\n",
+      "Generation 20: 55.90%, entropy: 14.077186955568921\n",
+      "Generation 21: 55.90%, entropy: 15.298416870736817\n",
+      "Generation 22: 55.90%, entropy: 16.471765919112162\n",
+      "Generation 23: 55.90%, entropy: 17.244163529944334\n",
+      "Generation 24: 55.90%, entropy: 17.387562115073848\n",
+      "Generation 25: 55.90%, entropy: 17.388006072345803\n",
+      "Generation 26: 55.90%, entropy: 17.788139630629576\n",
+      "Generation 27: 55.90%, entropy: 17.82272867738083\n",
+      "Generation 28: 55.90%, entropy: 17.875050185768533\n",
+      "Generation 29: 55.90%, entropy: 18.220692830681035\n",
+      "Generation 30: 55.90%, entropy: 18.24188186913865\n",
+      "Generation 31: 55.90%, entropy: 18.3106167740032\n",
+      "Generation 32: 55.90%, entropy: 18.26033663675311\n",
+      "Generation 33: 55.90%, entropy: 18.205551157980278\n",
+      "Generation 34: 55.90%, entropy: 18.10003449249554\n",
+      "Generation 35: 55.90%, entropy: 17.861498417031378\n",
+      "Generation 36: 55.90%, entropy: 17.785848797954493\n",
+      "Generation 37: 55.90%, entropy: 17.77616313474777\n",
+      "Generation 38: 55.90%, entropy: 17.758037480423862\n",
+      "Generation 39: 55.90%, entropy: 17.791032563611004\n",
+      "Generation 40: 55.90%, entropy: 17.820945494200092\n",
+      "Generation 41: 55.90%, entropy: 17.800233992393505\n",
+      "Generation 42: 55.90%, entropy: 17.774837692246813\n",
+      "Generation 43: 55.90%, entropy: 18.094659892852086\n",
+      "Generation 44: 55.90%, entropy: 18.091139148257163\n",
+      "Generation 45: 55.90%, entropy: 18.09075477292639\n",
+      "Generation 46: 55.90%, entropy: 18.09075477292639\n"
      ]
     }
    ],
@@ -316,37 +254,25 @@
     "# initial population\n",
     "pop=[Individual(choices([0, 1], k=GENOME_LENGHT)) for _ in range(POP_DIM)]\n",
     "\n",
-    "\n",
     "best=max(pop, key=lambda i: i.get_fitness())\n",
     "\n",
     "for gen in range(N_GENERATIONS):\n",
-    "\n",
-    "    entropy_gen=compute_pop_entropy(pop)\n",
     "\n",
     "    if countdown_to_extinction == 0:\n",
     "        print(\"Extinction!\")\n",
     "        to_keep=sorted(pop, key=lambda i: i.get_fitness(), reverse=True)[:10]\n",
     "        pop=to_keep+extinction(pop[10:],to_keep=10) \n",
     "\n",
-    "    # if entropy_gen<0.65:\n",
-    "    #     to_keep=sorted(pop, key=lambda i: i.get_fitness(), reverse=True)[:500]\n",
-    "    #     pop=to_keep+extinction(pop[500:],to_keep=500) \n",
-    "    #     print(\"PP\",len(pop))\n",
-    "\n",
     "    for off in range(OFFSPRING_SIZE):\n",
-    "\n",
-    "        if entropy_gen < MUTATION_PROB:\n",
+    "        \n",
+    "        if randint(0,1) < MUTATION_PROB:\n",
     "            p=tournament_selection(pop)\n",
     "            offspring = mutation(p)\n",
+    "            pop.append(offspring)\n",
     "        else:\n",
     "            p1,p2 = two_level_diversity_selection(pop, 3)\n",
-    "            offspring = two_cut_xover(p1, p2)\n",
-    "            # offspring = entropy_stocastic_selection(pop)\n",
-    "        \n",
-    "        pop.append(offspring)\n",
-    "        pop=apply_fitness_penalty(pop,offspring)\n",
+    "            offspring = two_cut_xover_with_mut(p1, p2)\n",
     "    pop=sorted(pop, key=lambda i: i.get_fitness(), reverse=True)[:POP_DIM]\n",
-    "\n",
     "\n",
     "    if pop[0].get_fitness() == best.get_fitness():\n",
     "        countdown_to_extinction-=1\n",
@@ -359,8 +285,8 @@
     "        print(f\"Solution found at generation {gen}:{''.join(str(g) for g in best.get_genome())}\")\n",
     "        break\n",
     "\n",
-    "    print(f\"Generation {gen}: {best.get_fitness():.2%}, entropy: {entropy_gen}\")\n",
-    "print(f\"Best individual: {''.join(str(g) for g in best.get_genome())}\")\n",
+    "    print(f\"Generation {gen}: {best.get_fitness():.2%}, entropy: {compute_pop_entropy(pop)}\")\n",
+    "\n",
     "pprint(fitness.calls)\n"
    ]
   }
